# Malleus

./: .gitignore  Bkgd.cxx  Bkgd.h  CMakeLists.txt  ConfigFile.h  Errors.h  Flux.cxx  Flux.h  FunctionDefs.h  MCMC.cxx  MCMC.h  Makefile  Pdf1D.cxx  Pdf1D.h  Pdf3D.cxx  Pdf3D.h  PdfParent.cxx  PdfParent.h  PdfParentDummy.cxx  PdfParentDummy.h  README  RealFunction.cxx  RealFunction.h  Sys.cxx  Sys.h  Tools.cxx  Tools.h  autoFit.C  diffs.txt  drawResults.cxx  generateMap.cxx  getAutoCorr.C  main.cxx  metaConfig.cxx  metaReader.cxx  metaReader.h
doc/: CodeUsage.tex  MCMC.tex  Makefile  Malleus.bib  Malleus.tex  SigEx.tex  biblio.tex
doc/Figures/MCMC/: LikelihoodExample.eps  LikelihoodExample.fig  LikelihoodExample.fig.bak
src/: Decider.cxx  Decider.h  Errors.cxx  FunctionDefs.h  PdfParent.cxx  Sys.cxx  main.cxx  metaReader.cxx  metaReader.h
tests/firstSys/: README  makeDist.C
tests/simplest/: README  makeData.C
